@@ -2,6 +2,9 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+May ## 2017 (bgol, horizon branch):
+. Updated Journal plugin to ignore all events in multicrew.
+
 May 23 2017 (bgol, horizon branch):
 . Don't change the planetary state if updating via the station command
   without specifying it.
